# glTF-loader-and-Phong-Lighting-Demo

./: .gitignore
PhongLighting/headers/: Camera.h  Model.h  Shader.h  Texture.h
PhongLighting/resources/shaders/: default.frag  default.vert
PhongLighting/src/: CMakeLists.txt  Mesh.cpp  Model.cpp  PhongLighting.cpp  Shader.cpp
